force-app/main/default/objects/Attendee__c/fields/TotalDiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountPrice__c</fullName>
    <label>Total Discount Price</label>
    <summarizedField>Ticket__c.DiscountPrice__c</summarizedField>
    <summaryForeignKey>Ticket__c.Attendee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>