force-app/main/default/objects/Attendee__c/fields/TotalTicketPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalTicketPrice__c</fullName>
    <label>Total Ticket Price</label>
    <summarizedField>Ticket__c.TicketPrice__c</summarizedField>
    <summaryForeignKey>Ticket__c.Attendee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>