force-app/main/default/objects/Attendee__c/fields/TotalTickets__c.field-meta.xml
<CustomField>
    <fullName>TotalTickets__c</fullName>
    <label>Total Tickets</label>
    <summaryForeignKey>Ticket__c.Attendee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>