force-app/main/default/objects/Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>JobTitle__c</columns>
    <columns>CompanyName__c</columns>
    <columns>TotalTickets__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>